--- a/.vsts-ci/steps/run-tests.yml
+++ b/.vsts-ci/steps/run-tests.yml
@@ -6,9 +6,9 @@ steps:
     Write-Host "##vso[task.setvariable variable=GIT_SSL_CAINFO]"$(Get-Content cacert.txt)"
     # Shorten paths to get under MAX_PATH or else integration tests will fail
     # https://bugs.python.org/issue18199
-    subst T: $env:TEMP
-    $env:TEMP = "T:\"
-    $env:TMP = "T:\"
+    subst T: "$env:TEMP"
+    Write-Host "##vso[task.setvariable variable=TEMP]"T:\"
+    Write-Host "##vso[task.setvariable variable=TMP]"T:\"
     Get-ChildItem Env
     D:\.venv\Scripts\pipenv run pytest -n 4 -ra --ignore=pipenv\patched --ignore=pipenv\vendor --junitxml=test-results.xml tests
   displayName: Run integration tests
