Set environment before calling which
Signed-off-by: Dan Ryan <dan@danryan.co>

--- a/.vsts-ci/phases/run-tests.yml
+++ b/.vsts-ci/phases/run-tests.yml
@@ -14,7 +14,7 @@ steps:
    export GIT_SSL_CAINFO="$(python -m certifi)"
    export LANG="C.UTF-8"
    export PIP_PROCESS_DEPENDENCY_LINKS="1"
-   echo "Path: $PATH"
+   echo "Path $PATH"
    echo "Installing Pipenv…"
    pip install -e "$(pwd)" --upgrade
    pipenv install --deploy --dev
