--- a/.vsts-ci/steps/run-tests.yml
+++ b/.vsts-ci/steps/run-tests.yml
@@ -8,7 +8,9 @@ steps:
     # https://bugs.python.org/issue18199
     subst T: "$env:TEMP"
     Write-Host "##vso[task.setvariable variable=TEMP]T:\"
+    $env:TEMP='T:\'
     Write-Host "##vso[task.setvariable variable=TMP]T:\"
+    $env:TEMP='T:\'
     Get-ChildItem Env:
     D:\.venv\Scripts\pipenv run pytest -n 4 -ra --ignore=pipenv\patched --ignore=pipenv\vendor --junitxml=test-results.xml tests
   displayName: Run integration tests
